<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="account_has_been_added">Your account has been added</string>
    <string name="action_choose_thread">Choose thread</string>
    <string name="action_copy">Copy</string>
    <string name="action_create_post">Create post</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="action_open_in_browser">Open in Browser</string>
    <string name="action_open_posts">Open posts</string>
    <string name="action_send_all_experimental">Send all (experimental)</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload_pictures">Upload pictures</string>
    <string name="app_name" translatable="false">Photo Reporter</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="choose_thread">Choose thread</string>
    <string name="description_header">description (header)</string>
    <string name="error">Error</string>
    <string name="logged_in">Logged in</string>
    <string name="name">Name</string>
    <string name="no_data">No data</string>
    <string name="no_posts_found">No posts found</string>
    <string name="no_report_found">No report found</string>
    <string name="not_logged">You are not logged in</string>
    <string name="ok">OK</string>
    <string name="imgur_please_sign_in">Please, sign in (check Remember Me)</string>
    <string name="preference_attach_app_footer">Attach application footer</string>
    <string name="preference_attach_signature">Attach the signature</string>
    <string name="preference_dimension_title">Greater dimension of the photo</string>
    <string name="preference_imgur_account">Imgur (account)</string>
    <string name="preference_imgur_anonymous">Imgur (anonymous)</string>
    <string name="preference_one_post">One post</string>
    <string name="preference_personal_information">Personal</string>
    <string name="preference_picture_header">Picture</string>
    <string name="preference_picture_host_title">Picture host</string>
    <string name="preference_picture_quality_title">Quality</string>
    <string name="preference_pictures_per_post__title">Pictures per post</string>
    <string name="preference_post">Post</string>
    <string name="preference_signature_title">Your signature</string>
    <string name="preference_thumbnail_dimension_title">Thumbnail dimension</string>
    <string name="report_name">Report name</string>
    <string name="report_name_cant_be_empty">Report name can\'t be empty.</string>
    <string name="report_title">Report</string>
    <string name="save">Save</string>
    <string name="select_pictures">Select pictures</string>
    <string name="select_thread">Select</string>
    <string name="send_all_experimental">Send (experimental)</string>
    <string name="send_experimental">Send (experimental)</string>
    <string name="thread">Thread</string>
    <string name="thread_not_set">Thread is not set</string>
    <string name="title_activity_account_manager">Accounts</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_report_list">Photo Reporter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pictures_uploaded_successfully">Pictures uploaded successfully</string>
    <string name="pictures_upload_error">Fatal error: some pictures not uploaded</string>
    <string name="preference_picture_order_title">Order</string>
    <string name="preference_default_order">Default</string>
    <string name="preference_last_modified_asc">Last modified (ascending)</string>
    <string name="preference_last_modified_desc">Last modified (descending)</string>
    <string name="channel_upload_name">Upload</string>
    <string name="notification_upload_title">Upload</string>
    <string name="notification_upload_text">Upload in progress</string>
    <string name="notification_upload_cancel">Cancel</string>
    <string name="imgur_not_enough_credits">Application has not enough daily credits</string>
    <string name="application_footer">\nReport generated by Photo Reporter [URL]https://github.com/marteczek/photo-reporter[/URL]</string>
    <string name="database_error">Database error</string>
    <string name="please_log_in_to_upload">Please, log in to upload photos</string>
    <string name="title_activity_find_thread">Find thread</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_send_all">Send all</string>
    <string name="title_activity_post_in_browser">Post in Browser</string>
    <string name="title_activity_threads">Threads</string>
    <string name="time_to_next_post">Time to next post (sec)</string>
    <string name="client_id" translatable="false">d8fe95203c14036</string>
    <string name="action_find_by_tag">Find by tag</string>
    <string name="search">Search</string>
    <string name="tag">Tag</string>
    <string name="preference_watermark_image">Image</string>
    <string name="title_picture">Picture</string>
    <string name="preference_watermark_distance_title">Distance from screen edge</string>
    <string name="preference_top_left" translatable="false">top-left</string>
    <string name="preference_top_left_title">Top left</string>
    <string name="preference_top_right" translatable="false">top-right</string>
    <string name="preference_top_right_title">Top right</string>
    <string name="preference_bottom_left" translatable="false">bottom-left</string>
    <string name="preference_bottom_left_title">Bottom left</string>
    <string name="preference_bottom_right" translatable="false">bottom-right</string>
    <string name="preference_bottom_right_title">Bottom right</string>
    <string name="preference_watermark_header">Watermark</string>
    <string name="preference_watermark_title">Watermark</string>
    <string name="preference_distance">Distance</string>
    <string name="title_fragment_settings_watermark">Settings (watermark)</string>
    <string name="preference_watermark_position_title">Position</string>
    <string name="preference_apply_watermark_title">Apply watermark</string>
    <string name="action_add_pictures">Add pictures</string>
    <string name="preference_apply_map_title">Add map</string>
    <string name="preference_map_zoom_title">Zoom</string>
    <string name="preference_map_header">Map</string>
    <string name="preference_map_transparency_title">Transparency</string>
    <string name="preference_map_title">Map</string>
    <string name="title_fragment_settings_map">Settings (map)</string>
    <string name="preference_apply_gps_direction_title">GPS direction</string>
    <string name="preference_map_shape_title">Shape</string>
    <string name="preference_square_title">Square</string>
    <string name="preference_circle_title">Circle</string>
    <string name="preference_square" translatable="false">square</string>
    <string name="preference_circle" translatable="false">circle</string>
    <string name="osm_copyright">Ⓒ OpenStreetMap contributors</string>
    <string name="preference_map_provider_title">Map provider</string>
    <string name="preference_osm" translatable="false">osm</string>
    <string name="preference_google" translatable="false">google</string>
</resources>
